[project]
name = "main"
version = "0.1.0"
description = "For homework"
authors = [
    {name = "Maxym Zviahin",email = "maxzvyagin@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
